--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "tailwindcss-textshadow": "^2.1.3"
   },
